Poniendo todos los títulos en mayúsculas y quitándoles el punto final

--- a/txt/02.datos.md
+++ b/txt/02.datos.md
@@ -10,13 +10,13 @@ empieza a teclear números y palabras
 
 	>>> 3
 	>>> "cosas"
-	
+
 Las palabras llevarán comillas alrededor. Incluso aunque se trate de
 una sola letra. El intérprete se *acuerda* de lo último que has
 tecleado
 
-	>>> _ 
-	
+	>>> _
+
 ![Usando el subrayado para recordar lo último tecleado](../img/_.png).
 
 Podemos pasar así el día, así que vamos a empezar a hacer algo con
@@ -28,7 +28,7 @@ Nada inesperado en este
 área. [Suma, resta, multiplicación y división](https://en.wikibooks.org/wiki/Python_Programming/Basic_Math#Mathematical_Operators)
 
 	>>> 3*8+5.2**8
-		
+
 dará un número bastante grande, teniendo en cuenta que `**` es
 *elevado a*, es decir, `2**8` es 2 a la octava potencia. En esto no se
 diferencia de otros lenguajes. Por ejemplo, si abres la consola de
@@ -36,10 +36,10 @@ desarrollo en tu navegador (con mayúsculas-control-k en Firefox, por
 ejemplo), tendrás el mismo resultado, aunque estaremos trabajando en JavaScript.
 
 ![Resultado en la consola de desarrollo de JavaScript](../img/js-resultado.png).
-	
+
 Los números no son todos iguales. Los enteros y los números reales
 (los que tienen coma decimal) se comportarán de forma diferente,
-aunque no habrá que preocuparse (demasiado) por ello ahora mismo. 
+aunque no habrá que preocuparse (demasiado) por ello ahora mismo.
 
 ```python
 >>> type(3)
@@ -82,7 +82,7 @@ type(800//20)
 De camino,
 vemos la primera función: `type`. Las funciones en Python llevan
 siempre paréntesis y tienen una serie de argumentos que, en su caso,
-se separarán por comas. 
+se separarán por comas.
 
 Y también de camino, vemos el concepto
 de
@@ -144,7 +144,7 @@ todavía no han llegado a hacerlo.
 
 Afortunadamente, Python no sólo trabaja con números. También puede
 
-## Trabajar con cualquier tipo de caracteres.
+## Trabajar con cualquier tipo de caracteres
 
 Pero vamos a dar un paso hacia atrás, o hacia un lado, para reconocer
 que existen letras más allá de nuestro alfabeto latino. Empezando por
@@ -155,9 +155,9 @@ lenguaje de programación moderno, y un ordenador moderno, debe ser
 capaz de trabajar con todos ellos.
 
 	"þor el poderoso ✌"
-	
+
 Como hemos visto más arriba, las cadenas o *strings* están rodeadas
-por comillas. 
+por comillas.
 
 >Hemos elegido þ como carácter raro porque es uno de los pocos de este
 >tipo que se pueden teclear fácilmente desde el teclado castellano. þ
@@ -178,9 +178,9 @@ Las cadenas están compuestas por caracteres, y podemos acceder a ellos
 indicando su índice, que comienza por 0: ` "þor el poderoso ✌"[16]`
 devolverá ✌. También podemos acceder a grupos de caracteres, usando el
 rango `x:y`. `_[0:3]` nos devolverá los 4 primeros caracteres de la
-última cadena, lo que es equivalente a  `_[:3]`. 
+última cadena, lo que es equivalente a  `_[:3]`.
 
-Los operadores aritméticos también se pueden usar sobre cadenas. 
+Los operadores aritméticos también se pueden usar sobre cadenas.
 
 >Cuando un operador se puede aplicar sobre tipos diferentes se dice
 >que está *sobrecargado*. En muchos lenguajes también puede definir el
@@ -199,7 +199,7 @@ _ + " y Loki el mentiroso ❄"
 
 y el asterisco `*`, usado tradicionalmente como símbolo para
 multiplicar, en este caso las replicará `"þor, " * 3 + "y más þor"`
-resultará en la cadena `'þor, þor, þor, y más þor'`. 
+resultará en la cadena `'þor, þor, þor, y más þor'`.
 
 El tipo de estas cadenas es `str`. ¿Y qué ocurre cuando tratamos de
 mezclarlas con los números? Pues que resulta en un error.
@@ -213,7 +213,7 @@ una cadena a un número, así que simplemente expresa su disconformidad
 con el asunto, diciendo que se trata de un `TypeError`. Pero error es
 una palabra un poco fuerte.
 
-## Hablemos de los problemas de entendimiento.
+## Hablemos de los problemas de entendimiento
 
 En el caso anterior, el intérprete nos ha dicho: `TypeError: must be
 str, not int`. Pero es leer la palabra **error** y uno empieza a
@@ -235,7 +235,7 @@ in "3.4" + 7 : argumento no-numérico para operador binario`. No le
 gusta la cadena y no tiene reparos en decirlo, porque R es un lenguaje
 estadístico, y por tanto (casi) matemático. Perl, sin embargo, llevará
 el *tipado pato* hasta las últimas consecuencias, dando como resultado
-10.4. 
+10.4.
 
 Lo que viene a querer decir que lenguajes diferentes van a entender
 esa expresión, forzosamente ambigua, de forma diferente. Pero si no la entienden,
@@ -254,7 +254,7 @@ TypeError: unsupported operand type(s) for +: 'int' and 'str'
 que es algo más informativo. Ya no te está diciendo que el entero es
 un error, sino que alguno de los dos está equivocado. En las líneas
 anteriores, además, te indica dónde ha ocurrido, aunque `File
-"<stdin>", line 1, in <module>`no sea demasiado amigable. 
+"<stdin>", line 1, in <module>`no sea demasiado amigable.
 
 En todo caso, estos mensajes te ayudan a entender dónde ha producido
 el malentendido y de qué se trata. Aunque estén en inglés (en la
@@ -275,14 +275,14 @@ a
 verás contextos similares y una solución al problema. En este caso, te
 viene a decir que hay que hacer una conversión explícita:
 `7+float("3.4")`, lo que está totalmente de acuerdo
-con [el *zen* de Python](https://hipertextual.com/2011/02/zen-python): 
+con [el *zen* de Python](https://hipertextual.com/2011/02/zen-python):
 
 	>Explícito antes que implícito
-	
+
 Y, por supuesto, toda esta sección se corresponde al de
 
 	>Los errores no deben suceder en silencio
-	
+
 Como conclusión a esta sección: si el ordenador no te entiende y te
 lo dice cortésmente, lee, comprende, trata de adaptarte a lo que
 requiere, pero si todo falla, Google es tu amigo.
@@ -292,9 +292,4 @@ requiere, pero si todo falla, Google es tu amigo.
 No es malo equivocarse. Sucede en las mejores familias, incluso en las
 operaciones más básicas. Para las cuales puedes usar Python como si
 fuera una calculadora un poco más complicada y que usara, además,
-cadenas de caracteres. Vale, una calculadora complicada *y* rara. 
-
-
-
-
-
+cadenas de caracteres. Vale, una calculadora complicada *y* rara.
