--- a/txt/03.logica.md
+++ b/txt/03.logica.md
@@ -29,9 +29,9 @@ type(True)
 ```
 
 Por sí solos los tipos booleanos tampoco son tan útiles. Pero sí lo son
-para hacer 
+para hacer
 
-## Operaciones lógicas.
+## Operaciones lógicas
 
 Conviene recordar que, para empezar, todo valor tiene un equivalente
 lógico. Estas operaciones no se tienen por qué hacer, necesariamente,
@@ -43,7 +43,7 @@ False
 ```
 
 `not` cambia lo verdadero a falso y lo falso a verdadero, pero siempre
-devolverá un booleano. 
+devolverá un booleano.
 
 ```python
 not(None)
@@ -86,7 +86,7 @@ equivale a Falso. Con `or` sucederá algo similar:
 tanto es falso) y otro verdadero, devolverá el que sea
 verdadero, o uno de ellos operando si los dos tienen el mismo tipo. A
 `or` le basta con que sea cierto uno de los operandos, como se ve
-arriba. 
+arriba.
 
 >Curiosamente, `or` devuelve el segundo operando si el resultado es
 >falso, y el primero si el resultado es True. Eso puede tener que ver
@@ -97,18 +97,18 @@ arriba.
 >evaluar el segundo resultado. En el caso de `or`, aunque el primer operando sea falso, hay
 >que evaluar también el segundo, pero si el primero es verdadero, el
 >resultado va a ser verdadero, así que simplemente devuelven el último
->operando evaluado. 
+>operando evaluado.
 
 Aunque estas operaciones se usan con asiduidad, las que tienen más
 interés son las operaciones de comparación que dan un resultado
-Verdadero o Falso. 
+Verdadero o Falso.
 
 >*Ejercicio*: se dice que una fórmula es ["satisfacible"](https://es.wikipedia.org/wiki/Problema_de_satisfacibilidad_booleana) si es
 >verdadera al menos para una combinación de valores. Con una fórmula
 >de 3 variables, ¿cuantas combinaciones posibles de valores hay?
 >Diseña una fórmula y pruébala sistemáticamente hasta que encuentres
 >si es satisfacible o no. Altérala y conviértela en no-satisfacible,
->probándola también sistemáticamente. 
+>probándola también sistemáticamente.
 
 Hay
 más
@@ -146,12 +146,12 @@ csharp> true?"Yay":"Nay"
 El orden es igual que en el anterior: antes del símbolo de
 interrogación está la condición; si es cierta, el resultado será
 `"Yay"`, si no, `"Nay"`. Efectivamente, el resultado de la aplicación
-de este, o *el*, operador ternario, es el esperable. 
+de este, o *el*, operador ternario, es el esperable.
 
 
 
 
-## Comparaciones no odiosas.
+## Comparaciones no odiosas
 
 Algunas operaciones también devuelven un valor lógico: verdadero o falso. Un número es mayor o igual que otro, por ejemplo.
 
@@ -193,7 +193,7 @@ La solución a
 esto
 [no es demasiado simple](https://stackoverflow.com/questions/1097908/how-do-i-sort-unicode-strings-alphabetically-in-python). Por
 lo pronto simplemente conviene tratar de evitar la sorpresa cuando se
-usen caracteres que no sean los 23 del alfabeto inglés. 
+usen caracteres que no sean los 23 del alfabeto inglés.
 
 > *Ejercicio*: Escribe una expresión que sea cierta (es decir, sea `True`) si un número está en un intervalo comprendido entre dos números naturales.
 
@@ -216,17 +216,17 @@ tiene un operador para cada una: `==` e `===`. El que se usen varios
 signos `=` en vez de uno solo es porque este se suele reservar para
 asignaciones, y es un error bastante habitual poner `x = y` en vez de
 `x == y`. Algunos compiladores e intérpretes, incluso, avisan en
-ciertas circunstancias del posible error. Son muy majetes. 
+ciertas circunstancias del posible error. Son muy majetes.
 
 Para expresar desigualdad, `!=` es también símbolo cuasi-universal. En
-Python se puede usar con cualquier tipo de dato. 
+Python se puede usar con cualquier tipo de dato.
 
 > *Ejercicio*: Usando sólo los símbolos de mayor y menor y operadores
 > lógicos (`and` y `or`), construir
 > una expresión que sea equivalente a `!=`. Probar con diferentes
-> valores que efectivamente es así. 
+> valores que efectivamente es así.
 
-## Dos veces no es sí.
+## Dos veces no es sí
 
 Los operadores que se sitúan entre dos operandos se llaman
 binarios. `<=`, por ejemplo, es un operador binario
@@ -258,7 +258,7 @@ cuasi-universal del `!`
 
 En Python nos lo encontramos dentro de la comparación `!=`. ¿Por qué
 no se usa `not`? [Porque *simple es mejor que complicado*](https://hipertextual.com/2011/02/zen-python) y `x != y`
-es más simple que `not x == y`. 
+es más simple que `not x == y`.
 
 > *Ejercicio*: probar, usando todos los casos posibles,
 > las
@@ -280,16 +280,16 @@ mínimo número de *conectores* posibles. Y resulta que `NAND`, donde `a
 NAND b == not (a and b)`, es suficiente para expresar absolutamente
 todos los operadores lógicos unarios y binarios. En este caso el
 paréntesis hace que se ejecute primero el `a and b` antes que el not;
-la precedencia más alta del `not` obliga a que se haga de esta forma. 
+la precedencia más alta del `not` obliga a que se haga de esta forma.
 
 > *Ejercicio*: expresar `and`, `or` y `not` usando sólo NAND y probar
 > exhaustivamente, usando valores de True y False, que es así.
 
 Al final, los lenguajes de programación son lenguajes que te permiten
 expresar y resolver problemas. Enseñar a pensar usando ordenadores se
-denomina 
+denomina
 
-## Pensamiento computacional,
+## Pensamiento computacional
 
 y se basa
 en
@@ -321,7 +321,7 @@ Perl6:
 
 ```Ruby
  :002 > (3+4i)*(5+0.1i)
- => (14.6+20.3i) 
+ => (14.6+20.3i)
 ```
 
 *A priori*, es complejo pensar en algún problema "del mundo real" que
@@ -332,7 +332,7 @@ forma más eficiente de trabajar es usando estos números
 complejos. Trabajando en la línea de órdenes:
 
 ```Python
->>>1+3.14j 
+>>>1+3.14j
 
 >>> _*(1+3.14j)
 _*(1+3.14j)
@@ -368,10 +368,10 @@ segunda es tratar de conseguir partes de un número usando operaciones
 con 5s. Cero, por ejemplo, es 5-5. Uno, 5/5. Esta no es la solución a
 los dos primeros, pero sí para el tercero, 2 == 5/5 + 5/5. ¿Y cómo
 haríamos 5? Teniendo en cuenta que cualquier cosa multiplicada por 0
-es cero... 
+es cero...
 
 > *Ejercicio*: usa sólo cuatro números 5 para reconstruir los números del 0
-> al 5. Si puedes, hazlo hasta el 10. 
+> al 5. Si puedes, hazlo hasta el 10.
 
 
 El último mecanismo, el *reconocimiento de patrones*, se aleja más de
@@ -379,7 +379,7 @@ lo puramente computacional, siendo simplemente una herramienta del
 pensamiento crítico. Pero eso no quiere decir que no sea útil. Por
 ejemplo, muchas de las técnicas, o la mayoría, de las usadas en el
 ejercicio anterior, ¿se podrían usar con cualquier otro número, es
-decir, sustituyendo el 5 por el 4 o por el 7? 
+decir, sustituyendo el 5 por el 4 o por el 7?
 
 > *Ejercicio*: ¿Para qué números se pueden usar más o menos los mismos
 > patrones que para el 5? ¿Funciona con el 4? ¿Funciona con el 6?
@@ -390,9 +390,9 @@ Como parte de la descomposición mencionada anteriormente está el hecho
 de que, eventualmente, toda la información que hay en un ordenador se
 reduce a puertas lógicas que pueden tomar un valor 0 o 1, verdad o
 mentira. Por eso casi todos los lenguajes de programación tienen
-operadores que permiten trabajar con los números 
+operadores que permiten trabajar con los números
 
-## a nivel de bit.
+## A nivel de bit
 
 Trabajar con números en su representación binaria muchas veces es
 la forma más rápida de hacer ciertas pruebas; dado que, de hecho, el
@@ -430,7 +430,7 @@ Así, '<<' puede ser una forma rápida de hallar potencias de 2
 ```
 
 Hay otros dos operadores que son equivalentes a *or* y *not*, `|` y
-`~` a nivel binario. Además, el siguiente operador es bastante interesante: `XOR`. 
+`~` a nivel binario. Además, el siguiente operador es bastante interesante: `XOR`.
 Se trata de un
 operador lógico que es 1 cuando uno de los dos operandos es 1, pero no
 cuando lo son los dos, se denomina *o exclusivo* o *exclusive or*, de
@@ -446,7 +446,7 @@ de un número puede ser la siguiente:
 `1 << 3` correspondería al número binario `100`, es decir, 1 corrido
 tres posiciones. 32 es el número binario `10000`. `32 ^ 8` es `10000 ^
 100`, es decir, cambiaría el tercer bit (empezando por izquierda o derecha,
-da igual), que convertiría el número en el 40 que vemos. 
+da igual), que convertiría el número en el 40 que vemos.
 
 En otros lenguajes, como [Lua](http://lua.org), se usan exactamente
 los mismos símbolos para el mismo tipo de operadores. Estos
@@ -464,17 +464,17 @@ en Python. El truco aquí es simplemente darse cuenta de que `>> 1` es
 como una división entera por dos. Esto no funciona si alguno de
 los números es impar, pero si se trabaja sólo con enteros sería una
 forma muy rápida, ya que se hace directamente en el procesador usando
-instrucciones del mismo, de realizar esta operación. 
+instrucciones del mismo, de realizar esta operación.
 
 > *Ejercicio* Usando `xor`, comprobar si dos números enteros tienen el
-> mismo signo. 
+> mismo signo.
 
 
 Es muy probable que en el ejercicio anterior hayas tenido buscar en
 Internet. Si lo has hecho, te habrás dado cuenta de que
 
-## Todo está en StackOverflow.
- 
+## Todo está en StackOverflow
+
 Para qué vamos a engañarnos, seguro que siguiendo este tutorial o,
 para el caso, cualquier otro, habéis consultado una o más veces Google
 buscando cómo hacer algo. Un dominio ligero del inglés y una conexión
@@ -490,7 +490,7 @@ Muchas de las respuestas van a estar
 en [StackOverflow](http://stackoverflow.com), que se inició como un
 sitio de preguntas y respuestas pero que eventualmente ha evolucionado
 en una serie de sitios de diferentes temas, desde la historia hasta la
-estadística pasando por LaTeX o, por supuesto, programación. 
+estadística pasando por LaTeX o, por supuesto, programación.
 
 StackOverflow tiene un sistema de puntuaciones por parte de los
 usuarios que pone como mejor respuesta la mejor puntuada; eso te
@@ -511,20 +511,20 @@ tienes alguna duda, no sin antes hacer lo siguiente:
 
 1. Buscar exhaustivamente por todo Google y el propio StackOverflow
    por una respuesta a esa pregunta y algunas más generales.
-   
+
 2. Reducir al mínimo el error o el problema que tengas. No puedes
    subir 200 líneas de código y esperar que alguien se las lea. Si el
    error está en 2 líneas, pues mucho mejor.
-   
+
 3. Poner de forma precisa cuál es el error: mensaje de error completo
    o de forma precisa qué es lo que quieres hacer y no puedes. Durante
    este proceso el propio StackOverflow te sugerirá otras
    posibilidades. Léelas con cuidado, porque es posible que esté la
-   respuesta. 
-   
+   respuesta.
+
 4. Una vez hecha la pregunta, difúndela por las redes sociales. Se
    hacen miles de preguntas en StackOverflow. Una puede pasar sin
-   pena, gloria ni solución. La difusión ayuda. 
+   pena, gloria ni solución. La difusión ayuda.
 
 Una vez que empieces a hacerlo, te convertirás en un verdadero experto
 y comprenderás el chiste que circula diciendo que los cursos de
