--- a/txt/04.componiendo.md
+++ b/txt/04.componiendo.md
@@ -7,18 +7,18 @@ letras. En matemáticas existen estructuras, como las matrices y
 vectores, que están compuestas de datos más simples, números
 reales. Los árboles son estructuras de datos que son capaces de representar
 cosas tan diversas como un árbol genealógico o la estructura de un
-edificio. 
+edificio.
 
 Todos los lenguajes de programación, o la mayoría, son capaces de
 trabajar con estas estructuras, con una forma de escribirlas o
 sintaxis particular y unas funciones que permiten modificarlas o
 combinarlas. Empezaremos por las
 
-## funciones,
+## Funciones
 
 que especifican qué secuencia de operaciones se debe aplicar a un
 elemento determinado. En Python, las funciones son datos como
-cualquier otro, número o cadena, y se pueden definir usando `lambda`. 
+cualquier otro, número o cadena, y se pueden definir usando `lambda`.
 
 ```Python
 (lambda dato: dato*dato)(3+4j)
@@ -28,7 +28,7 @@ cualquier otro, número o cadena, y se pueden definir usando `lambda`.
 Esta función va a usar `dato` para referirse a los valores que se le
 van a pasar a la función; tras los `:` especifica la operación que va
 a realizar sobre el mismo, que es a la vez el valor que va a
-devolver. En este caso, multiplicará el valor por sí mismo y devolverá el 
+devolver. En este caso, multiplicará el valor por sí mismo y devolverá el
 resultado, o sea, el cuadrado del valor. Los primeros
 paréntesis, que, recordemos, sirven para agrupar operaciones, definen
 esta operación sin nombre; los segundos paréntesis sirven para definir
@@ -38,7 +38,7 @@ valor, aunque podrían ser varios, y devuelve otro valor. No tiene
 *efectos secundarios*: no cambia nada en el exterior, ni siquiera el
 valor de las variables sobre las que trabaja. Recibe una copia de los
 valores con los que la función es llamada, en lo que se denomina *paso por
-valor*, y devuelve otro valor. Simple y elegante. 
+valor*, y devuelve otro valor. Simple y elegante.
 
 A los lenguajes que tienen, aparte de la posibilidad de definir
 funciones como datos *de primera categoría*, otra serie de
@@ -99,12 +99,12 @@ orientados a objetos como C, el estilo funcional es uno de los
 paradigmas predominantes en esta década y posiblemente al principio de
 la siguiente. Conviene conocer los lenguajes de programación
 funcionales, e intentar funcionar de forma funcional (broma totalmente
-intencionada) en el resto de los lenguajes. Incluso en Python. 
+intencionada) en el resto de los lenguajes. Incluso en Python.
 
 Una función es una estructura compleja porque incluye definiciones de
 parámetros y también código. Pero
 
-## vectores, listas y otras estructuras secuenciales
+## Vectores, listas y otras estructuras secuenciales
 
 almacenan grupos de datos que pueden tener alguna relación
 entre ellas. Por ejemplo
@@ -120,7 +120,7 @@ se va a aplicar repetidamente para obtener el resultado. Los tipos son
 diferentes, tan diferentes como se pueda ser, pero a Python le da
 igual. Los corchetes `[]` al principio y al final son los que indican
 que se trata de una lista y las comas separan cada elemento del
-siguiente. 
+siguiente.
 
 Como todo en Python,
 las
@@ -159,7 +159,7 @@ terceto. Es decir, puede ser conveniente que los valores sean
 inmutables, que no
 cambien. Las
 [*tuplas*](http://openbookproject.net/thinkcs/python/english3e/tuples.html) representan
-este tipo de dato que va a ser inalterable a lo largo de su vida. 
+este tipo de dato que va a ser inalterable a lo largo de su vida.
 
 ```Python
 ("A1", 4+5j, lambda dato: dato*dato )
@@ -186,14 +186,14 @@ números complejos como dato base):
 El `'` al principio hace que la lista no se evalúe, porque toda lista,
 siempre, se evalúa en Clojure. Y, como se ha indicado, esa lista no se puede modificar, como
 las tuplas de Python, sólo puede ser evaluada o pasada a una función
-para que genere una nueva lista. 
+para que genere una nueva lista.
 
 En los dos lenguajes y en los dos casos indicados, las listas pueden
 tener elementos homogéneos o heterogéneos. En muchos casos vamos a
 trabajar con elementos del mismo tipo, numéricos por ejemplo. Siempre
 que vayamos a
 
-## procesar listas,
+## Procesar listas
 
 como la siguiente:
 ```
@@ -209,7 +209,7 @@ lista para poder trabajar con él fácilmente. Como generador de listas
 de números, `range` es bastante flexible,
 [pero es inmutable](http://www.mclibre.org/consultar/python/lecciones/python_range.html). Por
 eso necesitamos convertirlo en un tipo mutable para poder trabajar con
-él alterándolo *in situ*. 
+él alterándolo *in situ*.
 
 Por ejemplo, esta expresión nos halla los números divisibles por 11
 entre los 100 primeros:
@@ -228,7 +228,7 @@ del objeto en el argumento, siempre que esto sea posible, claro.
 
 >*Ejercicio*: Listar todos los números que sean potencia de dos entre
 >los 1000 primeros números. ¿Se puede usar una técnica parecida para
->las potencias de tres? 
+>las potencias de tres?
 
 Como generación de sucesiones una vez que uno tiene manera de decidir
 si algo pertenece o no a la sucesión está bien, pero muchas veces lo
@@ -259,7 +259,7 @@ tipos con resultado que, siendo coherentes, son diferentes. `*` se
 puede aplicar a números enteros dando un resultado entero, a reales y
 enteros dando un resultado real, y a enteros y cadenas dando como
 resultado una cadena. Esto no quiere decir que `*` funcione siempre;
-si se trata de multiplicar por un número real, producirá un error. 
+si se trata de multiplicar por un número real, producirá un error.
 
 ![Error con multiplicación con reales](../img/error-float-string.png)
 
@@ -271,11 +271,11 @@ list(map(len,['●●●', '●●●●●●●●●●●●●●●', '●
 [3, 15, 2, 7, 33]
 ```
 
-Que devolverá, de una forma retorcida, los número que había en la
+Que devolverá, de una forma retorcida, los números que había en la
 lista original, tras medir el número de círculos en la cadena que es,
 efectivamente, el mismo. Obsérvese que el primer argumento de map es
 siempre una función. Map llamará a esa función una vez por cada elemento de la
-lista. 
+lista.
 
 `len` es una de las
 pocas
@@ -310,13 +310,13 @@ simplemente separados por espacios, así que `replicate rep "\#"`
 replica `rep` veces el asterisco, `concat $` lo reúne en una sola
 cadena, y por tanto, también de una forma un tanto complicada, crea
 "barras" con almohadillas "#" de la longitud de los diferentes
-elementos de la lista que se le pasa. 
+elementos de la lista que se le pasa.
 
 Haskell, como todos los lenguajes como los que hemos trabajado, tiene
 un REPL que se ejecuta desde la línea de órdenes, así que quizás
-convenga también 
+convenga también
 
-## aprender unas cuantas órdenes
+## Aprender unas cuantas órdenes
 
 que permiten trabajar con la misma. Estas órdenes corresponden al
 `shell` de Linux, que funciona, aunque posiblemente en una versión más
@@ -338,19 +338,19 @@ algunas órdenes útiles que funcionan en todos los intérpretes:
   `grep "TypeError: must" *` buscará exactamente esa frase; la única
   diferencia con el caso anterior es que rodeamos la cadena que se
   busca con comillas para que se busque íntegra.
-  
-* Se pueden crear directorios con `mkdir` y borrarse con `rmdir`. 
+
+* Se pueden crear directorios con `mkdir` y borrarse con `rmdir`.
 
 * La orden `find` también es muy útil. Tratamos de buscar el
   directorio donde metimos el dichoso fichero de Python, pues `find
   . -name *.py -print`. En realidad en PowerShell sólo busca en el
   directorio actual, pero en Linux descenderá por todos los
   directorios a partir de `.`, el directorio actual.
-  
+
 * `ls` lista todos los ficheros y directorios del directorio actual,
   incluyendo `.` y `..`, y `ls -alt` los muestra con permisos y los
   ordena por fecha de modificación.
-  
+
 ![ls -alt en PowerShell](../img/ps.png)
 
 DuckDuckGo, el buscador para
@@ -363,4 +363,3 @@ puedes tener como referencia a si quieres saber cómo se hace cualquier
 otra cosa. Los dos shells son muy potentes, y permiten crear programas
 potentes y expresivos. Conocerlos bien es un gran complemento al uso
 de cualquier lenguaje de programación.
-
