--- a/txt/05.identificando.md
+++ b/txt/05.identificando.md
@@ -1,4 +1,4 @@
-# Dando nombre a las cosas.
+# Dando nombre a las cosas
 
 En los lenguajes de programación hay tantos objetos que hay que
 dividir el espacio de todos los nombres posibles para poder usar
@@ -13,7 +13,7 @@ identificadores. Ya hemos visto algunos de estos, los que se usan para
 designar a las funciones. Pero ya va siendo hora de que conozcamos a
 nuestras amigas
 
-## las variables.
+## Las variables
 
 Las variables almacenan objetos que vamos a usar más adelante;
 permiten hacer expresiones más claras y concisas y no tener que
@@ -22,7 +22,7 @@ almacena el último valor calculado en el intérprete. También otras
 variables como las que se usan en expresiones `lambda`, que más que
 para almacenar sirven para representar valores que se le pasan a una
 expresión, aunque tienen la misma forma sean para representar o para
-almacenar. 
+almacenar.
 
 El asunto de darle nombre a un objeto o
 expresión
@@ -32,7 +32,7 @@ no usar ni `l` ni `O` ni `I` porque seguro que habéis tenido que estar
 un momento pensando si se trata de un 0 o de un 1. El `_` es una forma
 conveniente de separar palabras en una variable, sustituyendo al
 espacio, de forma que se preferirá `es_primo` a `esPrimo`. Esta última
-convención se suele denominar *CamelCase* y conviene evitarla [por diversas razones](https://whathecode.wordpress.com/2011/02/10/camelcase-vs-underscores-scientific-showdown/). 
+convención se suele denominar *CamelCase* y conviene evitarla [por diversas razones](https://whathecode.wordpress.com/2011/02/10/camelcase-vs-underscores-scientific-showdown/).
 
 Las variables deben ser también descriptivas, como la siguiente:
 
@@ -53,13 +53,13 @@ convertimos el resultado a `list` por legibilidad. En este caso lo que
 estamos haciendo es hallar las cifras de una serie compuesta por las
 20 primeras potencias de dos. Para hallar las cifras de un número lo
 convertimos a una cadena con `str` y a continuación hallamos la
-longitud de esa cadena con `len`. 
+longitud de esa cadena con `len`.
 
 Trabajando con el REPL, las variables definidas se quedan en el mismo
 hasta que terminemos, y podemos usarlas en cálculos más adelante. Y,
 evidentemente, igual que las constantes que hemos venido usando, y
 como se ha visto al principio, tienen un tipo que se les asigna
-automáticamente. 
+automáticamente.
 
 ```Python
 type(potencias_de_2)
@@ -76,7 +76,7 @@ type(potencias_de_2)
 En el momento que se le vuelva a asignar un valor a la variable, el
 tipo cambia. En este caso se tratará de una *tupla*, que es también
 una secuencia y por tanto se le puede aplicar la función `map`
-anterior, pero en este caso una tupla es *inmutable*. 
+anterior, pero en este caso una tupla es *inmutable*.
 
 ```Python
 potencias_de_2.insert(64)
@@ -100,7 +100,7 @@ potencias_de_2
 ```
 
 donde se puede ver que, al tratarse de una lista y no una tupla, usa
-los corchetes y no los paréntesis. 
+los corchetes y no los paréntesis.
 
 > *Ejercicio*: Calcular los múltiplos de 3 entre los 100 primeros
 > números naturales. ¿Qué tipo de estructura de datos podemos usar?
@@ -114,14 +114,14 @@ menos directa. A calcular cuanto tiempo se tarda en realizar una
 operación se le llama hacer *benchmarking* y todos los lenguajes de
 programación vienen preparados para ello. Veremos como
 
-## medir la velocidad en Python.
+## Medir la velocidad en Python
 
 Pero primero vamos a ver cómo trabajar con Python desde la línea de
 órdenes. Cuando trabajamos en el REPL, se trata de un bucle en el que
 la `P` significa "imprimir", por lo que no nos tenemos que preocupar
 de eso; sin embargo, cuando tratamos de ejecutarlo desde la línea de
 órdenes del sistema, símbolo del sistema o como lo llames de forma
-habitual, siempre tendrá que estar envuelto en una orden `print`: 
+habitual, siempre tendrá que estar envuelto en una orden `print`:
 
 ```bash
 python -c "print(list(map(lambda n: n/2 == n//2, \
@@ -152,7 +152,7 @@ Hemos definido la función `es_par`, pero ahora nos encontramos con dos
 órdenes seguidas. Para que el intérprete lo entienda, las separamos
 con punto y coma. En Python se pueden separar todas las sentencias con
 `;`, pero realmente sólo es necesario cuando están en la misma línea,
-como se verá más adelante. 
+como se verá más adelante.
 
 Ahora cabría pensar si merece realmente la pena hacer esto. Es
 ligeramente más legible, lo que *está bien* desde el punto de vista de
@@ -190,7 +190,7 @@ no se crea una función cada vez que se ejecuta un bucle es más rápida,
 ejecutando eso nos va a dar más o menos el mismo resultado, que de
 hecho es el resultado que se obtiene prácticamente para todo. En este
 caso, para funciones tan simples, no resulta realmente demasiado
-útil. 
+útil.
 
 Probaremos desde el REPL, a ver si obtenemos algo más
 razonable. Importamos el módulo y la función del mismo que
@@ -248,23 +248,23 @@ que sea un 10% más rápido. Una vez más, si ésta no es una
 función crítica donde el sistema pasa el 90% del tiempo no vale la pena optimizar.
 
 En muchos casos, la mejor forma de optimizar es simplemente plantear
-algoritmos de otra forma. Por ejemplo, usando 
+algoritmos de otra forma. Por ejemplo, usando
 
-## recursión.
+## Recursión
 
 Se habla de recursión cuando una función se llama a sí misma. En
 programación funcional, resolver un problema usando recursión es la forma *normal* de hacer las cosas,
 suplantando la repetición. Uno de los principios de este tipo de
 programación es que las funcionen no tienen efectos secundarios; con
 la recursión se consigue *pasar* el estado como parámetro de una
-función sin tener que *guardarlo* en ningún momento. 
+función sin tener que *guardarlo* en ningún momento.
 
 En general, las funciones recursivas trabajan de la forma
 siguiente. Se compara el parámetro con el que marca el final de la
 recursión, que pueden ser uno o varios. Si es así, se devuelve el
 resultado. Si no, se llama a la función de nuevo con el parámetro
 procesado de alguna forma. Cuando se llega al final, se deshace la
-recursión y se devuelve el resultado. 
+recursión y se devuelve el resultado.
 
 La recursión funciona gracias a una estructura llamada [*pila* o *stack*](https://en.wikipedia.org/wiki/Stack_(abstract_data_type)). Una
 pila es una lista en la cual hay definidas sólo dos operaciones:
@@ -296,7 +296,7 @@ múltiplo de tres si la cifra resultante es 3 o 9.
 ```Python
 suma_cifras = lambda n:  sum(map(int,list(str(n))))
 def is_multiple_of_3(n): sum = suma_cifras(n); \
-  return is_multiple_of_3(sum) if (sum >= 10) \ 
+  return is_multiple_of_3(sum) if (sum >= 10) \
   else (True  if (sum==3) or (sum==9) else False)
 ```
 
@@ -307,7 +307,7 @@ caracteres que representan cifras, pero que tendremos que volver a
 convertir en números para poder sumarlos. Una vez más, se hace uso de dos
 técnicas de pensamiento computacional: buscar la representación
 adecuada para los datos, y crear la división de una operación en tres pasos (y
-eso en una sola línea). 
+eso en una sola línea).
 
 La recursividad se usa en la siguiente línea. Y es aquí donde tenemos que usar la
 forma tradicional de definir funciones de Python: `def`, porque con el
@@ -318,7 +318,7 @@ viene a ser un contrasentido; úsese sólo en caso de que sea más fácil
 de comprender que la forma alternativa o se pueda definir en una sola
 línea. Tras el nombre de la función `is_multiple_of_3` ponemos entre
 paréntesis el parámetro que vamos a usar en la misma y, como
-anteriormente, órdenes separadas por `;`. 
+anteriormente, órdenes separadas por `;`.
 
 La primera halla la suma de las cifras.
 La segunda usa la construcción Resultado `if` cierto `else` lo que
@@ -335,7 +335,7 @@ recursión queda más evidente. Si tiene más de una cifra (mayor que
 comprobar si es o no múltiplo de 3: ¿es 3 o 9? Se devuelve `True`;
 o `False` en caso contrario. El `return` al principio de la llamada
 recursiva es el que finalmente recoge el resultado. Al trabajar en el
-REPL habrá que pulsar ⤶ para indicar que termina ahí. 
+REPL habrá que pulsar ⤶ para indicar que termina ahí.
 
 > *Ejercicio*: usar una función recursiva para calcular el factorial
 > de un número. ¿Habría alguna otra forma de hacerlo? ¿Cuál es más
@@ -345,7 +345,7 @@ Podemos usar también recursión para calcular elementos de una sucesión
 que se defina de forma recursiva. En algunos lenguajes hay formas más
 compactas de hacerlo, por ejemplo en [Groovy](http://groovy-lang.org)
 definiríamos de esta forma el n-ésimo elemento de la sucesión de
-Fibonacci 
+Fibonacci
 
 ```Groovy
 def fib(n) {n<2 ? 1 : fib(n-1)+fib(n-2)}
@@ -356,16 +356,16 @@ mayoría de los lenguajes y que es similar al `if-else` en una sola
 línea de Python, con ? equivalente a `if` y `:` a `else`, aunque en
 otro orden: la comparación no es el segundo elemento, sino el
 primero. En este caso, si n es menor que dos se devuelve uno, si no se
-hace una llamada a la función sumando los dos elementos anteriores. 
+hace una llamada a la función sumando los dos elementos anteriores.
 
 > *Ejercicio*: usando una función recursiva equivalente a la anterior
 > en Python, calcular los 20 primeros elementos de la sucesión de
 > Fibonacci. ¿Hasta que número es más o menos razonable hacerlo de
-> esta forma? 
+> esta forma?
 
 Te estarás preguntando si todas estas líneas son solo bytes, y se
 perderán como lágrimas en la lluvia cuando se apague el
-ordenador. Pues sí, pero no tiene por qué ser así si usas 
+ordenador. Pues sí, pero no tiene por qué ser así si usas
 
 ## GitHub
 
@@ -373,7 +373,7 @@ Ya te indicamos al principio de todo que era un buen momento para
 registrarse en GitHub, pero ibas muy liada y no nos hiciste
 caso. Vale, pues ahora *sí* que lo es, porque lo vamos a usar para
 publicar todas estas líneas que vas elaborando como ejercicios y poder
-enseñárselas al profe y al ancho mundo. 
+enseñárselas al profe y al ancho mundo.
 
 [GitHub](https://github.com) es un portal de desarrollo colaborativo
 de software que usa `git` como herramienta de control de
@@ -388,7 +388,7 @@ Se puede usar eligiendo un nombre de fichero y copiando y pegando el
 contenido en el sitio correspondiente; el fichero se puede comentar
 usando el formato de comentarios del lenguaje correspondiente, por
 ejemplo, comenzando la línea con `#` en Python (y para el caso,
-también en Perl y Ruby). 
+también en Perl y Ruby).
 
 >*Ejercicio*: subir a gist.github.com alguno de los ejercicios creados
 >anteriormente, usando comentarios para explicarlo. Difundirlo también
@@ -424,7 +424,7 @@ apariencia que corresponda a las marcas incluidas.
 Realmente va a ser conveniente que usemos este tipo de repositorios
 cuando trabajemos con estructuras de datos más, complejas, como los
 
-## conjuntos y diccionarios.
+## Conjuntos y diccionarios
 
 Comencemos con los que se denominan *diccionarios*, aunque en otros
 lenguajes se les llama *arrays* asociativos o tablas *hash*. Los
@@ -432,9 +432,9 @@ diccionarios están compuestos por pares clave-valor; la clave es una
 cadena, el valor puede ser cualquier cosa.
 
 ```Python
-juego = { 'jugador'   :'Johnny', 
-         'mano'      : ['5♠','Q♣','8♥'], 
-		 'estrategia': lambda mano: min(mano) } 
+juego = { 'jugador'   :'Johnny',
+         'mano'      : ['5♠','Q♣','8♥'],
+		 'estrategia': lambda mano: min(mano) }
 ```
 
 Esta variable contiene información sobre una mano
@@ -443,7 +443,7 @@ Johnny, cuya estrategia está representada por una función `estrategia`
 que siempre saca el mínimo de todas las cartas. No es una buena
 estrategia, pero una mejor no cabría en esa línea. El formateo se ha
 incluido simplemente para que sea un poco más visible, pero no tiene
-ninguna importancia en la sintaxis. En este caso. 
+ninguna importancia en la sintaxis. En este caso.
 
 De la misma forma que en las listas se accede al contenido iterando
 de elemento en elemento, en este caso accederemos por la `clave` para
@@ -480,25 +480,25 @@ sepa que se ha acabado la definición de la función. En este caso:
 
 ```Python
 from random import random
-juego_ricky = { 
-  'jugador'   :'Ricky', 
-  'mano'      : ['3♠','4♣','A♥'], 
+juego_ricky = {
+  'jugador'   :'Ricky',
+  'mano'      : ['3♠','4♣','A♥'],
   'estrategia': lambda mano: mano[int(random()*len(mano))] }
-				
+
 juega(juego_ricky)
 '3♠'
 juega(juego_ricky)
 'A♥'
 ```
 
-Como hay un ``random()`` en la estrategia, la carta resultante será 
+Como hay un ``random()`` en la estrategia, la carta resultante será
 una aleatoria de entre las que Ricky tenga en su mano.
 
 > *Ejercicio*: diseñar una estructura de datos para sucesiones
 > matemáticas que contenga el nombre de la sucesión, el elemento
 > inicial, y la función para calcular el siguiente elemento. Diseñar
 > también una función que efectivamente calcule el siguiente elemento
-> a partir del valor inicial. 
+> a partir del valor inicial.
 
 En general, todos los lenguajes de programación que no son dinosaurios
 como el C suelen tener esta estructura de datos. Incluso lenguajes
@@ -506,7 +506,7 @@ específicos de dominio como el que incluye PowerShell. Este script,
 por ejemplo, define una tabla hash o diccionario:
 
 ```PowerShell
-$juego_ricky = @{ "jugador" ="Ricky"; "mano" = @("3♠","4♣","A♥")} 
+$juego_ricky = @{ "jugador" ="Ricky"; "mano" = @("3♠","4♣","A♥")}
 $juego_ricky
 ```
 
@@ -534,7 +534,7 @@ mano_ricky= set( ['3♠','4♣','A♥'] )
 
 En este caso hay que usar una palabra clave `set` para aclarar que se
 trata de este tipo de estructura de datos, pero también podríamos
-haber usado llaves, exactamente igual que con los diccionarios. 
+haber usado llaves, exactamente igual que con los diccionarios.
 Se puede comprobar si un elemento pertenece o no a un conjunto:
 
 ```Python
@@ -543,7 +543,7 @@ True
 ```
 
 > *Ejercicio*: generar una baraja de cartas y una función que extraiga
-> una mano de 3 cartas de ella. 
+> una mano de 3 cartas de ella.
 
 Los conjuntos
 tienen
@@ -587,7 +587,7 @@ carta superior, que es lo que se hace con `pop`. Usando `|`, que
 representa en este caso la unión entre conjuntos, se genera un
 conjunto de un solo elemento, como arriba, poniendo llaves alrededor y
 se une a la mano de Johnny. Ha sido un 10♦, eso es suerte, aunque como
-dicen en *The Gambler*, 
+dicen en *The Gambler*,
 
 >Cada mano es ganadora, cada mano es perdedora.
 
@@ -598,14 +598,14 @@ representar una serie de problemas, sean listas, datos que no son
 homogéneos y a los que se le puede asignar un significado para mejorar
 su comprensión y tratamiento, incluso conjuntos para representar
 aquellos grupos de objetos que no tengan ninguna relación entre sí más
-que la igualdad de su pertenencia al mismo grupo. 
+que la igualdad de su pertenencia al mismo grupo.
 
 Todos los objetos tienen sus propias operaciones, y amplían la
 capacidad de abstracción de los problemas que se pueden resolver. Como
-dicen también en *The Gambler*, 
+dicen también en *The Gambler*,
 
 >Si quieres jugar al juego, debes aprender a jugar bien.
 
 En este caso, debes aprender cómo trabajar con las diferentes
 estructuras de datos y cuál es la más adecuada en cada caso. Y en caso
-de duda, mide tiempos y sigue el Zen de Python. 
+de duda, mide tiempos y sigue el Zen de Python.
