--- a/txt/06.sinpilas.md
+++ b/txt/06.sinpilas.md
@@ -5,7 +5,7 @@ espacio de nombres principal, es decir, sin prefijos, una serie de
 funciones, menos de 100. Ya hemos visto otras funciones, `timeit` y
 `random` que, aunque no estén *cargadas* por defecto, sí se pueden
 usar directamente siempre que las importemos en nuestro espacio de
-nombres. 
+nombres.
 
 Afortunadamente, el hecho de que Python sea software libre hace que se
 cree todo un ecosistema alrededor del mismo, con funciones que no
@@ -45,20 +45,20 @@ caso de la `baraja` que hemos mostrado en la imagen anterior, nos
 	tabulador; cuando seleccionamos uno y añadimos un paréntesis,
 	`bpython` nos explicará cuales son los parámetros que toma esta
 	función, lo que nos ahorra bastantes viajes a StackOverflow.
-	
+
 Vamos a usar a partir de ahora `bpython` para el resto del capítulo, y
 posiblemente del libro, así que conviene que esté convenientemente
 instalado a partir de este momento. Adicionalmente, eso significará
 que tienes permisos para instalarte cosas, sin el cual el resto del
-capítulo tampoco va a tener mucho sentido. 
+capítulo tampoco va a tener mucho sentido.
 
 Pero es posible que no tengas acceso a ningún ordenador de forma
 permanente. Estos tiempos bárbaros en los que la gente tiene acceso a
 cientos de ordenadores, pero ninguno de ellos tiene teclado o acceso
 de administrador, crean esas cosas. Así que nos tendremos que
-trasladar a 
+trasladar a
 
-## la nube.
+## La nube
 
 en una primera, y quizás mala, aproximación, la nube son recursos
 administrados por empresas que se pueden usar pagando sólo por el uso
@@ -83,13 +83,13 @@ puedes dar de alta, eso sí con una tarjeta de crédito, y usando tu ID
 de GitHub. Una vez dado de alta, se crea un *workspace* en Python con
 el nombre que uno quiera y automáticamente, con los ficheros y demás,
 aparece abajo una terminal desde la que se puede ejecutar el REPL de
-python y alguna cosa más. Se usa 
+python y alguna cosa más. Se usa
 
 ```
 sudo pip3 install bpython
 ```
 
-por ejemplo, para instalar el CLI con el que vamos a trabajar. 
+por ejemplo, para instalar el CLI con el que vamos a trabajar.
 
 
 ![usando `bpython` en Cloud9](../img/bpython-c9.io.png).
@@ -126,7 +126,7 @@ opciones:
 pip3 install --user bpython
 ```
 
-y posteriormente añadir 
+y posteriormente añadir
 
 ```
 export PATH=$PATH:~/.local/bin
@@ -142,12 +142,12 @@ Este *cloud shell* se desactiva y se borra a los 10 minutos de
 inactividad. Si realmente quieres conservar lo creado, o la historia,
 es mejor que uses una máquina virtual real, que tendrás que recordar
 apagar al final de cada sesión, porque todo consume y el crédito
-gratuito que se obtiene no es mucho. 
+gratuito que se obtiene no es mucho.
 
 Ya no tienes excusa para empezar a trabajar con `bpython` en la nube o
-donde sea. Así que vamos a ver el 
+donde sea. Así que vamos a ver el
 
-## Python más funcional,
+## Python más funcional
 
 en el sentido de la palabra: cómo trabajar con diferentes estructuras
 de datos siguiendo, dentro de lo posible, los preceptos de la
@@ -189,10 +189,10 @@ sort ['3♠','4♣','A♥'] Z sort ['7♣', '7♥', '7♦']
 Perl6 se ahorra paréntesis cuando no hacen falta y convierte `zip` en
 el operador infijo `Z`, es decir operador que, tal como los operadores
 matemáticos, está en medio de los operandos, en vez de al principio
-(lo que se suele denominar, en el caso de los operadores, *prefijo*). 
+(lo que se suele denominar, en el caso de los operadores, *prefijo*).
 
 > *Ejercicio*: crear una serie de fracciones, desde 1/3 hasta 1/99 y
-> hallar su suma. 
+> hallar su suma.
 
 Otra función, que estaba por alguna razón en Python 2 pero que ha sido
 exiliada a `functools` en Python 3 es `reduce`. Reduce aplica
@@ -220,14 +220,14 @@ un número por todos los que le preceden tal como estamos
 acostumbrados.
 
 > *Ejercicio*: Programar una función de Mandelbrot, usando números
-> complejos, de la misma forma. 
+> complejos, de la misma forma.
 
 No hace falta que el resultado final de un `reduce` sea un sólo
 número. Podemos por ejemplo ir creando una sucesión de Fibonacci,
 partiendo de un valor inicial: los dos primeros valores.
 
 ```Python
-def fib(n): 
+def fib(n):
     return reduce( lambda prev,this: \
 	prev+ [prev[-2]+prev[-1]], range(1,n+1), [1,1])
 fib(12)
@@ -240,7 +240,7 @@ fib(12)
 >que usan números arbitrarios como los números iniciales y que también
 >multiplican los términos anteriores por números naturales. Programar
 >la función `lucas` que genere estas sucesiones, y definir la función
->de Fibonacci como un caso particular de la misma. 
+>de Fibonacci como un caso particular de la misma.
 
 Esta misma función, `reduce`, está también presente en muchos otros
 lenguajes de programación. En JavaScript, por ejemplo, es uno de los
@@ -276,20 +276,20 @@ puede empezar a trabajar: hallar la suma, por ejemplo, o crear
 [las secuencias de Farey](http://nrich.maths.org/2086), que son
 secuencias de listas de fracciones. Por
 ejemplo,
-[se puede generar una aproximación al número e](https://en.wikipedia.org/wiki/Continued_fraction#A_property_of_the_golden_ratio_.CF.86). 
+[se puede generar una aproximación al número e](https://en.wikipedia.org/wiki/Continued_fraction#A_property_of_the_golden_ratio_.CF.86).
 
 Incluso de esta forma se pueden generar listas más complejas, como la
 multiplicación de dos vectores:
 
 ```Python
-[str(valor)+card for card in ["♠","♣","♥","♦"] 
+[str(valor)+card for card in ["♠","♣","♥","♦"]
     for valor in ['A','J','Q','K',2,3,4,5,6,7,8,9,10]]
 ```
 
 El primer `for` recorre los palos, el segundo los valores, y los dos
 juntos se unen, usando `+` para cadenas, en las cartas de la
 baraja. Usamos `str` alrededor de `valor` simplemente para ahorrarnos
-poner comillas alrededor de los números. 
+poner comillas alrededor de los números.
 
 > *Ejercicio*: para una urbanización con 4 bloques, 3 plantas por
 > bloque, dos pisos por planta, A y B, generar todos los posibles
@@ -316,7 +316,7 @@ y 1. `cuenta_pares` es la función que vamos a usar para reducir el
 array a un solo objeto. El primer argumento sería una lista. Usa el
 segundo argumento como un número, cuya paridad comprueba a base de
 hacer un `Y` por bits del último bit. Como el resultado es 0 o 1, usa
-`+=` para aumentar en 1 el valor de ese elemento de la lista. 
+`+=` para aumentar en 1 el valor de ese elemento de la lista.
 
 `+=` y en general cualquier operador más `=`, es una asignación que
 incluye el mismo elemento al que se asigna, es decir `loquesea =
@@ -354,7 +354,7 @@ usándose desde la época del C. Si ya hay una forma de hacerlo, usando
 > *Ejercicio*: Si habéis ejecutado el generador de números aleatorios
 > de arriba, habréis visto que rara vez el resultado es exactamente la
 > mitad de cada uno. ¿Cuanta desviación hay? Realizar una función que
-> contabilice la desviación del generador de números aleatorios. 
+> contabilice la desviación del generador de números aleatorios.
 
 
 
@@ -367,6 +367,4 @@ datos que se han elegido. Python no es exactamente un lenguaje
 funcional, pero los lenguajes modernos no pueden evitar tener ciertos
 rasgos funcionales, aunque no estén en las funciones base. Alguna
 función en un módulo como `functools` completa bastante bien el
-panorama. 
-
-
+panorama.
